# prismatic_visualizer

./: Cargo.toml  index.html
src/: camera.rs  main.rs  ui.rs  visualization.rs
src/three_dim_viz/: attribution.rs  color_channel_settings.rs  color_model_settings.rs  controls_settings.rs  dimensionality_settings.rs  foo_settings.rs  grid_settings.rs  mod.rs  perceptual_offset_settings.rs  scale_settings.rs
src/two_dim_viz/: color_peaks.rs  gradients.rs  hue_wheel.rs  mod.rs
src/ui/: mod.rs  ui_traits.rs
wasm/: index.html  prismatic_visualizer.js  wasm_build_script.sh
