[package]
name = "prismatic_visualizer"
version = "0.5.0"
edition = "2021"
authors = ["Quiet Orchestra"]

[dependencies]
bevy = "0.17.0"

bevy_egui = "0.37.1"
eframe = "0.34.0"
egui_double_slider = "0.9.0"

bevy_pointcloud = { git = "https://github.com/rlamarche/bevy_pointcloud.git", branch = "main" }


bevy_panorbit_camera = { version = "0.30.0", features = ["bevy_egui"] }

prismatic_color = { git = "https://github.com/digitalgreenery/prismatic-color.git" }
wasm-bindgen = "0.2.97"
bytemuck = "1.20.0"
indexmap = "2.10.0"

[features]
webgl = []
webgpu = []

[profile.release]

[profile.wasm-release]
inherits = "release"
opt-level = 's'

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.2", default-features = false, features = ["wasm_js"] }